# libdpiaware

./: .gitignore  CMakeLists.txt  README.md
include/: control.h  dpiaware.h  metrics.h
src/: control.c  metrics.c
